--- a/Project.toml
+++ b/Project.toml
@@ -33,6 +33,7 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 LoggingExtras = "e6f89c97-d47a-5376-807f-9c37f3926c36"
 MXHEquilibrium = "8efa4e5a-7b9a-4eec-876e-01d13d5b5d75"
+Measurements = "eff96d63-e80a-5855-80a2-b1b0885c5ab7"
 Memoize = "c03570c3-d221-55d1-a50c-7939bbd78826"
 Metaheuristics = "bcdb8e00-2c21-11e9-3065-2b553b22f898"
 ModelingToolkit = "961ee093-0014-501f-94e3-6117800e7a78"
@@ -88,6 +89,7 @@ LaTeXStrings = "1"
 LibGEOS = "0.9"
 LoggingExtras = "1"
 MXHEquilibrium = "1"
+Measurements = "2"
 Memoize = "0.4"
 Metaheuristics = "3"
 ModelingToolkit = "9"
