update VacFields compat to 2.4

--- a/Project.toml
+++ b/Project.toml
@@ -113,6 +113,6 @@ TGLFNN = "1"
 TJLF = "1"
 ThermalSystemModels = "1"
 TimerOutputs = "0.5"
-VacuumFields = "1.2, 2"
+VacuumFields = "2.4"
 Weave = "0.10"
 YAML = "0.4"
