--- a/Project.toml
+++ b/Project.toml
@@ -58,6 +58,7 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 TEQUILA = "a60c9cbd-e72f-4185-96b6-b8fc312c4d37"
 TGLFNN = "558c7b13-fd9f-4806-b461-592296cfa9d0"
 TJLF = "12ecd31c-256b-4db5-a799-cd5afeb0bd7d"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 ThermalSystemModels = "68b8b4ac-b179-4f07-8ae9-c1f1360acbca"
 TimerOutputs = "a759f4b9-e2f1-59dc-863e-4aeb61b1ea8f"
 VacuumFields = "9d9223b5-c5da-4bf4-abee-2a8bb6775a49"
@@ -111,6 +112,7 @@ StaticArrays = "1"
 TEQUILA = "1"
 TGLFNN = "1"
 TJLF = "1"
+Test = "1"
 ThermalSystemModels = "1"
 TimerOutputs = "0.5"
 VacuumFields = "2.4"
