--- a/Project.toml
+++ b/Project.toml
@@ -66,13 +66,12 @@ Weave = "44d3d7a6-8a23-5bf8-98c5-b353f8df5ec9"
 YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
 
 [weakdeps]
-BoundaryValueDiffEq = "764a87c0-6b3e-53db-9096-fe964310641d"
+SciMLBase = "0bca4576-84f4-4d90-8ffe-ffa030f20462"
 
 [compat]
 AbstractTrees = "0.4"
 BalanceOfPlantSurrogate = "2"
 BoundaryPlasmaModels = "1"
-BoundaryValueDiffEq = "5.0 - 5.10, 5.11.1 - 5"
 CHEASE = "1"
 CSV = "0.10"
 ClusterManagers = "0.4"
@@ -109,6 +108,7 @@ ProgressMeter = "1"
 QED = "1"
 QuadGK = "2"
 RABBIT = "1"
+SciMLBase = "2.0 - 2.58, 2.60 - 2"
 SimulationParameters = "1.1"
 SnoopPrecompile = "1"
 SpecialFunctions = "2"
