CompatHelper: bump compat for SciMLBase in [weakdeps] to 2, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -108,7 +108,7 @@ ProgressMeter = "1"
 QED = "1"
 QuadGK = "2"
 RABBIT = "1"
-SciMLBase = "2.0 - 2.58, 2.60 - 2"
+SciMLBase = "2.0 - 2.58, 2.60 - 2, 2"
 SimulationParameters = "1.1"
 SnoopPrecompile = "1"
 SpecialFunctions = "2"
