--- a/Project.toml
+++ b/Project.toml
@@ -19,7 +19,7 @@ EPEDNN = "e64856f0-3bb8-4376-b4b7-c03396503991"
 FFMPEG = "c87230d0-a227-11e9-1b43-d7ebe4e7570a"
 FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
-FuseUtils = "c8e4ee58-0bec-4a6a-b552-9dd24d6374ac"
+IMASutils = "b8e4ee59-9bed-3a6a-a553-8dd24d6374ad"
 FusionMaterials = "4c86da02-02c8-4634-8460-96566129f8e0"
 GeoInterface = "cf35fbd7-0cd7-5166-be24-54bfbe79505f"
 IMAS = "13ead8c1-b7d1-41bb-a6d0-5b8b65ed587a"
@@ -82,7 +82,7 @@ EPEDNN = "1"
 FFMPEG = "0.4"
 FileIO = "1"
 ForwardDiff = "0.10"
-FuseUtils = "1.1.2"
+IMASutils = "1.1.2"
 FusionMaterials = "1"
 GeoInterface = "1"
 IMAS = "1.15"
