--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -5,6 +5,7 @@ Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 FUSE = "e64856f0-3bb8-4376-b4b7-c03396503992"
 IMAS = "13ead8c1-b7d1-41bb-a6d0-5b8b65ed587a"
 IMASdd = "c5a45a97-b3f9-491c-b9a7-aa88c3bc0067"
+IMASutils = "b8e4ee59-9bed-3a6a-a553-8dd24d6374ad"
 InteractiveUtils = "b77e0a4c-d291-57a0-90e8-8db25a27a240"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 Literate = "98b081ad-f1c9-55d3-8b20-4c87d4299306"
