--- a/Project.toml
+++ b/Project.toml
@@ -19,10 +19,10 @@ EPEDNN = "e64856f0-3bb8-4376-b4b7-c03396503991"
 FFMPEG = "c87230d0-a227-11e9-1b43-d7ebe4e7570a"
 FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
-IMASutils = "b8e4ee59-9bed-3a6a-a553-8dd24d6374ad"
 FusionMaterials = "4c86da02-02c8-4634-8460-96566129f8e0"
 GeoInterface = "cf35fbd7-0cd7-5166-be24-54bfbe79505f"
 IMAS = "13ead8c1-b7d1-41bb-a6d0-5b8b65ed587a"
+IMASutils = "b8e4ee59-9bed-3a6a-a553-8dd24d6374ad"
 InteractiveUtils = "b77e0a4c-d291-57a0-90e8-8db25a27a240"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
@@ -70,7 +70,7 @@ SciMLBase = "0bca4576-84f4-4d90-8ffe-ffa030f20462"
 
 [compat]
 AbstractTrees = "0.4"
-BalanceOfPlantSurrogate = "2"
+BalanceOfPlantSurrogate = "2, 3"
 BoundaryPlasmaModels = "1"
 CHEASE = "1"
 CSV = "0.10"
@@ -82,10 +82,10 @@ EPEDNN = "1"
 FFMPEG = "0.4"
 FileIO = "1"
 ForwardDiff = "0.10"
-IMASutils = "1.1.2"
 FusionMaterials = "1"
 GeoInterface = "1"
 IMAS = "1.15"
+IMASutils = "1.1.2"
 Interpolations = "0.15"
 JSON = "0.21"
 JpegTurbo = "0.1"
