--- a/.github/workflows/runtests.yml
+++ b/.github/workflows/runtests.yml
@@ -141,3 +141,9 @@ jobs:
 
       # Run tests
       - uses: julia-actions/julia-runtest@v1
+
+      # Code coverage
+      - uses: julia-actions/julia-processcoverage@v1
+      - uses: codecov/codecov-action@v5
+        with:
+          files: lcov.info
