--- a/.github/workflows/runtests.yml
+++ b/.github/workflows/runtests.yml
@@ -146,4 +146,6 @@ jobs:
       - uses: julia-actions/julia-processcoverage@v1
       - uses: codecov/codecov-action@v5
         with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          slug: ProjectTorreyPines/FUSE.jl
           files: lcov.info
