--- a/Project.toml
+++ b/Project.toml
@@ -84,7 +84,7 @@ ForwardDiff = "0.10"
 IMASutils = "1.1.2"
 FusionMaterials = "1"
 GeoInterface = "1"
-IMAS = "2.0.1"
+IMAS = "2.0.1, 3"
 Interpolations = "0.15"
 JSON = "0.21"
 JpegTurbo = "0.1"
