--- a/.github/workflows/runtests.yml
+++ b/.github/workflows/runtests.yml
@@ -20,6 +20,8 @@ on:
       - master
       - dev
   pull_request:
+    branches:
+      - master
   schedule:
     - cron: '7 0 * * *' # midnight PT
 
