conditional to avoid double run of regressions on dev

--- a/.github/workflows/runtests.yml
+++ b/.github/workflows/runtests.yml
@@ -34,6 +34,9 @@ concurrency:
 
 jobs:
   test:
+    if: >
+      github.event_name == 'pull_request' ||
+      (github.event_name == 'push' && !startsWith(github.ref, 'refs/pull/'))
     name: Julia ${{ matrix.flavor.version }} - ${{ matrix.flavor.os }} - ${{ matrix.flavor.arch }}
     runs-on: ${{ matrix.flavor.os }}
     strategy:
