compat FRESCO = "0.2.3" IMAS = "3.1.0" VacuumFields = "3.0.4"

--- a/Project.toml
+++ b/Project.toml
@@ -75,11 +75,12 @@ DataFrames = "1"
 DelimitedFiles = "1"
 EPEDNN = "1"
 FFMPEG = "0.4"
+FRESCO = "0.2.3"
 FileIO = "1"
 ForwardDiff = "0.10"
 FusionMaterials = "1"
 GeoInterface = "1"
-IMAS = "3"
+IMAS = "3.1.0"
 IMASutils = "1.1.2"
 Interpolations = "0.15"
 JSON = "0.21"
@@ -113,7 +114,7 @@ Test = "1"
 ThermalSystemModels = "1"
 TimerOutputs = "0.5"
 TroyonBetaNN = "1"
-VacuumFields = "3"
+VacuumFields = "3.0.4"
 Weave = "0.10"
 YAML = "0.4"
 
