--- a/Project.toml
+++ b/Project.toml
@@ -64,13 +64,19 @@ VacuumFields = "9d9223b5-c5da-4bf4-abee-2a8bb6775a49"
 Weave = "44d3d7a6-8a23-5bf8-98c5-b353f8df5ec9"
 YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
 
+[weakdeps]
+ThermalSystemModels = "68b8b4ac-b179-4f07-8ae9-c1f1360acbca"
+
+[extensions]
+ThermalSystemModelsExt = "ThermalSystemModels"
+
 [compat]
 AbstractTrees = "0.4"
 BalanceOfPlantSurrogate = "3"
 BoundaryPlasmaModels = "1"
 CHEASE = "1"
 CSV = "0.10"
-ClusterManagers = "0.4"
+ClusterManagers = "0.4, 1"
 DataFrames = "1"
 DelimitedFiles = "1"
 EPEDNN = "1"
@@ -117,9 +123,3 @@ TroyonBetaNN = "1"
 VacuumFields = "3.0.4"
 Weave = "0.10"
 YAML = "0.4"
-
-[weakdeps]
-ThermalSystemModels = "68b8b4ac-b179-4f07-8ae9-c1f1360acbca"
-
-[extensions]
-ThermalSystemModelsExt = "ThermalSystemModels"
