Prevent upgrade to IMAS v3.2.2 until tests are fixed

--- a/Project.toml
+++ b/Project.toml
@@ -80,7 +80,7 @@ FileIO = "1"
 ForwardDiff = "0.10"
 FusionMaterials = "1"
 GeoInterface = "1"
-IMAS = "3.2"
+IMAS = "3.2, < 3.2.2"
 IMASutils = "1.1.2"
 Interpolations = "0.15"
 JSON = "0.21"
