--- a/Project.toml
+++ b/Project.toml
@@ -21,6 +21,7 @@ FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 FusionMaterials = "4c86da02-02c8-4634-8460-96566129f8e0"
 GeoInterface = "cf35fbd7-0cd7-5166-be24-54bfbe79505f"
+HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
 IMAS = "13ead8c1-b7d1-41bb-a6d0-5b8b65ed587a"
 IMASutils = "b8e4ee59-9bed-3a6a-a553-8dd24d6374ad"
 InteractiveUtils = "b77e0a4c-d291-57a0-90e8-8db25a27a240"
@@ -64,6 +65,12 @@ VacuumFields = "9d9223b5-c5da-4bf4-abee-2a8bb6775a49"
 Weave = "44d3d7a6-8a23-5bf8-98c5-b353f8df5ec9"
 YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
 
+[weakdeps]
+ThermalSystemModels = "68b8b4ac-b179-4f07-8ae9-c1f1360acbca"
+
+[extensions]
+ThermalSystemModelsExt = "ThermalSystemModels"
+
 [compat]
 AbstractTrees = "0.4"
 BalanceOfPlantSurrogate = "3"
@@ -80,6 +87,7 @@ FileIO = "1"
 ForwardDiff = "0.10"
 FusionMaterials = "1"
 GeoInterface = "1"
+HDF5 = "0.17.2"
 IMAS = "3.2"
 IMASutils = "1.1.2"
 Interpolations = "0.15"
@@ -117,9 +125,3 @@ TroyonBetaNN = "1"
 VacuumFields = "3.0.4"
 Weave = "0.10"
 YAML = "0.4"
-
-[weakdeps]
-ThermalSystemModels = "68b8b4ac-b179-4f07-8ae9-c1f1360acbca"
-
-[extensions]
-ThermalSystemModelsExt = "ThermalSystemModels"
