--- a/Project.toml
+++ b/Project.toml
@@ -14,6 +14,7 @@ DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
+EGGO = "25cd7528-e4e3-46fe-8df7-7ec8e1454e14"
 EPEDNN = "e64856f0-3bb8-4376-b4b7-c03396503991"
 FFMPEG = "c87230d0-a227-11e9-1b43-d7ebe4e7570a"
 FRESCO = "f2db6eb9-2c54-4c18-912b-ce467796777a"
@@ -63,6 +64,12 @@ TroyonBetaNN = "c0158764-c6e1-428b-a545-31826f389bc8"
 VacuumFields = "9d9223b5-c5da-4bf4-abee-2a8bb6775a49"
 Weave = "44d3d7a6-8a23-5bf8-98c5-b353f8df5ec9"
 YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
+
+[weakdeps]
+ThermalSystemModels = "68b8b4ac-b179-4f07-8ae9-c1f1360acbca"
+
+[extensions]
+ThermalSystemModelsExt = "ThermalSystemModels"
 
 [compat]
 AbstractTrees = "0.4"
@@ -117,9 +124,3 @@ TroyonBetaNN = "1"
 VacuumFields = "3.0.4"
 Weave = "0.10"
 YAML = "0.4"
-
-[weakdeps]
-ThermalSystemModels = "68b8b4ac-b179-4f07-8ae9-c1f1360acbca"
-
-[extensions]
-ThermalSystemModelsExt = "ThermalSystemModels"
