--- a/Project.toml
+++ b/Project.toml
@@ -80,6 +80,7 @@ CSV = "0.10"
 ClusterManagers = "0.4"
 DataFrames = "1"
 DelimitedFiles = "1"
+EGGO = "1"
 EPEDNN = "1"
 FFMPEG = "0.4"
 FRESCO = "0.2.3"
