--- a/Project.toml
+++ b/Project.toml
@@ -58,6 +58,7 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 TEQUILA = "a60c9cbd-e72f-4185-96b6-b8fc312c4d37"
 TGLFNN = "558c7b13-fd9f-4806-b461-592296cfa9d0"
 TJLF = "12ecd31c-256b-4db5-a799-cd5afeb0bd7d"
+TORBEAM = "b9bf819a-2a49-451a-b482-4ce9066e62e1"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 TimerOutputs = "a759f4b9-e2f1-59dc-863e-4aeb61b1ea8f"
 TroyonBetaNN = "c0158764-c6e1-428b-a545-31826f389bc8"
