--- a/Project.toml
+++ b/Project.toml
@@ -87,6 +87,7 @@ FileIO = "1"
 ForwardDiff = "0.10"
 FusionMaterials = "1"
 GeoInterface = "1"
+HelpPlots = "1"
 IMAS = "3.4.2"
 IMASutils = "1.1.2"
 Interpolations = "0.15"
