CompatHelper: add new compat entry for TORBEAM at version 1, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -119,6 +119,7 @@ StaticArrays = "1"
 TEQUILA = "1"
 TGLFNN = "1"
 TJLF = "1"
+TORBEAM = "1"
 Test = "1"
 ThermalSystemModels = "1"
 TimerOutputs = "0.5"
