Add PrecompileTools to FUSE

--- a/Project.toml
+++ b/Project.toml
@@ -45,6 +45,7 @@ Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 PolygonOps = "647866c9-e3ac-4575-94e7-e3d426903924"
+PrecompileTools = "aea7be01-6a6a-4083-8856-8a6e6704d82a"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 QED = "8bcbec86-48c7-11ec-16a6-c1bc83299373"
@@ -110,6 +111,7 @@ Optim = "1"
 OrderedCollections = "1"
 Plots = "1"
 PolygonOps = "0.1"
+PrecompileTools = "1.2.1"
 ProgressMeter = "1"
 QED = "1"
 QuadGK = "2"
