--- a/.github/workflows/runtests.yml
+++ b/.github/workflows/runtests.yml
@@ -148,5 +148,6 @@ jobs:
       # Code coverage
       - uses: julia-actions/julia-processcoverage@v1
       - uses: codecov/codecov-action@v5
+        if: github.ref != 'refs/heads/master'
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
