CompatHelper: bump compat for ClusterManagers to 2, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -79,7 +79,7 @@ BalanceOfPlantSurrogate = "3"
 BoundaryPlasmaModels = "1"
 CHEASE = "1"
 CSV = "0.10"
-ClusterManagers = "0.4"
+ClusterManagers = "0.4, 2"
 DataFrames = "1"
 DelimitedFiles = "1"
 EGGO = "1"
