CompatHelper: bump compat for ForwardDiff to 1, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -86,7 +86,7 @@ EGGO = "1"
 EPEDNN = "1"
 FRESCO = "0.2.3"
 FileIO = "1"
-ForwardDiff = "0.10"
+ForwardDiff = "0.10, 1"
 FusionMaterials = "1"
 GeoInterface = "1"
 HDF5 = "0.17.2"
