CompatHelper: bump compat for FRESCO to 0.3, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -84,7 +84,7 @@ DataFrames = "1"
 DelimitedFiles = "1"
 EGGO = "1"
 EPEDNN = "1"
-FRESCO = "0.2.3"
+FRESCO = "0.2.3, 0.3"
 FileIO = "1"
 ForwardDiff = "0.10"
 FusionMaterials = "1"
