--- a/Project.toml
+++ b/Project.toml
@@ -89,6 +89,7 @@ FRESCO = "0.3"
 FileIO = "1"
 ForwardDiff = "0.10"
 FusionMaterials = "1"
+GACODE = "1"
 GeoInterface = "1"
 HDF5 = "0.17.2"
 HelpPlots = "1"
