--- a/Project.toml
+++ b/Project.toml
@@ -42,6 +42,7 @@ Metaheuristics = "bcdb8e00-2c21-11e9-3065-2b553b22f898"
 NEO = "081d0416-0f87-42c0-8034-5895805e76d8"
 NLsolve = "2774e3e8-f4cf-5e23-947b-6d7e65073b56"
 NNeutronics = "a9424c20-d414-11ec-167b-9106c24d956c"
+NonlinearSolve = "8913a72c-1f9b-4ce2-8d82-65094dcecaec"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
@@ -108,6 +109,7 @@ Metaheuristics = "3"
 NEO = "2"
 NLsolve = "4"
 NNeutronics = "1"
+NonlinearSolve = "4.8.0"
 Optim = "1"
 OrderedCollections = "1"
 Plots = "1"
