--- a/Project.toml
+++ b/Project.toml
@@ -96,7 +96,7 @@ HDF5 = "0.17.2"
 HelpPlots = "1"
 IMAS = "5.2"
 IMASutils = "1.5.1"
-Interpolations = "0.15"
+Interpolations = "0.15, 0.16.1"
 JSON = "0.21"
 JpegTurbo = "0.1"
 LaTeXStrings = "1"
