--- a/Project.toml
+++ b/Project.toml
@@ -19,6 +19,7 @@ EPEDNN = "e64856f0-3bb8-4376-b4b7-c03396503991"
 FRESCO = "f2db6eb9-2c54-4c18-912b-ce467796777a"
 FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
+FuseActorsBase = "14d2df4d-917c-4e76-a423-ec011a83437b"
 FusionMaterials = "4c86da02-02c8-4634-8460-96566129f8e0"
 GACODE = "bb074124-7a58-47ce-bd41-6b7098184f23"
 GeoInterface = "cf35fbd7-0cd7-5166-be24-54bfbe79505f"
