--- a/Project.toml
+++ b/Project.toml
@@ -120,6 +120,7 @@ ProgressMeter = "1"
 QED = "1.5"
 QuadGK = "2"
 RABBIT = "2"
+Serialization = "1.11.0"
 SimulationParameters = "2"
 SnoopPrecompile = "1"
 SpecialFunctions = "2"
