--- a/Project.toml
+++ b/Project.toml
@@ -60,12 +60,12 @@ SnoopPrecompile = "66db9d55-30c0-4569-8b51-7e840670fc0c"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 TEQUILA = "a60c9cbd-e72f-4185-96b6-b8fc312c4d37"
-TGLFNN = "558c7b13-fd9f-4806-b461-592296cfa9d0"
 TJLF = "12ecd31c-256b-4db5-a799-cd5afeb0bd7d"
 TORBEAM = "b9bf819a-2a49-451a-b482-4ce9066e62e1"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 TimerOutputs = "a759f4b9-e2f1-59dc-863e-4aeb61b1ea8f"
 TroyonBetaNN = "c0158764-c6e1-428b-a545-31826f389bc8"
+TurbulentTransport = "9bf5e8f4-5746-4003-bc69-ef83265c10ca"
 VacuumFields = "9d9223b5-c5da-4bf4-abee-2a8bb6775a49"
 Weave = "44d3d7a6-8a23-5bf8-98c5-b353f8df5ec9"
 YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
@@ -126,7 +126,6 @@ SnoopPrecompile = "1"
 SpecialFunctions = "2"
 StaticArrays = "1"
 TEQUILA = "1"
-TGLFNN = "1"
 TJLF = "1"
 TORBEAM = "1"
 Test = "1"
