--- a/Project.toml
+++ b/Project.toml
@@ -40,9 +40,9 @@ MXHEquilibrium = "8efa4e5a-7b9a-4eec-876e-01d13d5b5d75"
 Measurements = "eff96d63-e80a-5855-80a2-b1b0885c5ab7"
 Memoize = "c03570c3-d221-55d1-a50c-7939bbd78826"
 Metaheuristics = "bcdb8e00-2c21-11e9-3065-2b553b22f898"
-NEO = "081d0416-0f87-42c0-8034-5895805e76d8"
 NLsolve = "2774e3e8-f4cf-5e23-947b-6d7e65073b56"
 NNeutronics = "a9424c20-d414-11ec-167b-9106c24d956c"
+NeoclassicalTransport = "e630bb45-bea9-4e62-953e-b44d0741ac01"
 NonlinearSolve = "8913a72c-1f9b-4ce2-8d82-65094dcecaec"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
@@ -108,7 +108,7 @@ MXHEquilibrium = "1"
 Measurements = "2"
 Memoize = "0.4"
 Metaheuristics = "3"
-NEO = "2.1"
+NeoclassicalTransport = "1"
 NLsolve = "4"
 NNeutronics = "1"
 NonlinearSolve = "4.8.0"
@@ -132,6 +132,7 @@ Test = "1"
 ThermalSystemModels = "1"
 TimerOutputs = "0.5"
 TroyonBetaNN = "1"
+TurbulentTransport = "1"
 VacuumFields = "4"
 Weave = "0.10"
 YAML = "0.4"
