CompatHelper: bump compat for VacuumFields to 5, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -108,9 +108,9 @@ MXHEquilibrium = "1"
 Measurements = "2"
 Memoize = "0.4"
 Metaheuristics = "3"
-NeoclassicalTransport = "1"
 NLsolve = "4"
 NNeutronics = "1"
+NeoclassicalTransport = "1"
 NonlinearSolve = "4.8.0"
 Optim = "1"
 OrderedCollections = "1"
@@ -133,6 +133,6 @@ ThermalSystemModels = "1"
 TimerOutputs = "0.5"
 TroyonBetaNN = "1"
 TurbulentTransport = "1"
-VacuumFields = "4"
+VacuumFields = "4, 5"
 Weave = "0.10"
 YAML = "0.4"
