Added DiffEqs to the FUSE dependencies. COntinuing to code the actual eqs and ODEsolve

--- a/Project.toml
+++ b/Project.toml
@@ -13,6 +13,7 @@ ClusterManagers = "34f1f09b-3a8b-5176-ab39-66d58a4d544e"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
+DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 EGGO = "25cd7528-e4e3-46fe-8df7-7ec8e1454e14"
 EPEDNN = "e64856f0-3bb8-4376-b4b7-c03396503991"
@@ -85,6 +86,7 @@ CSV = "0.10"
 ClusterManagers = "0.4"
 DataFrames = "1"
 DelimitedFiles = "1"
+DifferentialEquations = "7.16.1"
 EGGO = "2.0"
 EPEDNN = "1"
 FRESCO = "0.3, 0.4"
@@ -108,9 +110,9 @@ MXHEquilibrium = "1"
 Measurements = "2"
 Memoize = "0.4"
 Metaheuristics = "3"
-NeoclassicalTransport = "1"
 NLsolve = "4"
 NNeutronics = "1"
+NeoclassicalTransport = "1"
 NonlinearSolve = "4.8.0"
 Optim = "1"
 OrderedCollections = "1"
