--- a/Project.toml
+++ b/Project.toml
@@ -87,7 +87,7 @@ DataFrames = "1"
 DelimitedFiles = "1"
 EGGO = "2.0"
 EPEDNN = "1"
-FRESCO = "0.5"
+FRESCO = "0.5, 0.6"
 FileIO = "1"
 FixedPointAcceleration = "1.0.1"
 ForwardDiff = "0.10"
