--- a/Project.toml
+++ b/Project.toml
@@ -19,6 +19,7 @@ EPEDNN = "e64856f0-3bb8-4376-b4b7-c03396503991"
 FRESCO = "f2db6eb9-2c54-4c18-912b-ce467796777a"
 FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
 FixedPointAcceleration = "817d07cb-a79a-5c30-9a31-890123675176"
+Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 FusionMaterials = "4c86da02-02c8-4634-8460-96566129f8e0"
 GACODE = "bb074124-7a58-47ce-bd41-6b7098184f23"
