--- a/Project.toml
+++ b/Project.toml
@@ -50,6 +50,7 @@ OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 PolygonOps = "647866c9-e3ac-4575-94e7-e3d426903924"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
+PrettyTables = "08abe8d2-0d0c-5749-adfa-8a2ac140af0d"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 QED = "8bcbec86-48c7-11ec-16a6-c1bc83299373"
 QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
