--- a/Project.toml
+++ b/Project.toml
@@ -87,6 +87,7 @@ ClusterManagers = "0.4"
 DataFrames = "1"
 DelimitedFiles = "1"
 DifferentialEquations = "7.16.1"
+Distributed = "1.11.0"
 EGGO = "2.0"
 EPEDNN = "1"
 FRESCO = "0.3, 0.4"
