mcp server for actors knowledge base

--- a/.gitignore
+++ b/.gitignore
@@ -72,6 +72,8 @@ LocalPreferences.toml
 julia-*.out
 examples/Untitled.ipynb
 tmp.gif
+*.pyc
+*.log
 
 # Generated knowledge base files
 knowledge/actors/
