studies run setup

--- a/Project.toml
+++ b/Project.toml
@@ -14,6 +14,7 @@ CoordinateConventions = "7204ce3a-f536-43d2-be4a-fbed74e90d86"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
+Dierckx = "39dd38d3-220a-591b-8e3c-4c3a8c710a94"
 DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 EFIT = "cda752c5-6b03-55a3-9e33-132a441b0c17"
@@ -25,6 +26,7 @@ Fortran90Namelists = "8fb689aa-71ff-4044-8071-0cffc910b57d"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 FusionMaterials = "4c86da02-02c8-4634-8460-96566129f8e0"
 GeoInterface = "cf35fbd7-0cd7-5166-be24-54bfbe79505f"
+Glob = "c27321d9-0574-5035-807b-f59d2c89b15c"
 IMAS = "13ead8c1-b7d1-41bb-a6d0-5b8b65ed587a"
 IMASDD = "06b86afa-9f21-11ec-2ef8-e51b8960cfc5"
 InteractiveUtils = "b77e0a4c-d291-57a0-90e8-8db25a27a240"
@@ -56,10 +58,12 @@ QED = "8bcbec86-48c7-11ec-16a6-c1bc83299373"
 QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Serialization = "9e88b42a-f829-5b0c-bbe9-9e923198166b"
+ServeFUSE = "a60e8048-5fdc-4552-ada6-0089beefc5de"
 SimulationParameters = "32ab26d3-25d6-405d-a295-367385e16093"
 SnoopPrecompile = "66db9d55-30c0-4569-8b51-7e840670fc0c"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+TAUENN = "4f5ffc88-c87f-11eb-142e-4d2ba0394a67"
 TEQUILA = "a60c9cbd-e72f-4185-96b6-b8fc312c4d37"
 TGLFNN = "558c7b13-fd9f-4806-b461-592296cfa9d0"
 TJLF = "12ecd31c-256b-4db5-a799-cd5afeb0bd7d"
@@ -69,3 +73,7 @@ VacuumFields = "9d9223b5-c5da-4bf4-abee-2a8bb6775a49"
 Weave = "44d3d7a6-8a23-5bf8-98c5-b353f8df5ec9"
 XSteamTP = "d40c7a0e-b328-4954-9d8e-c203ade7593f"
 YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
+
+[compat]
+Dierckx = "0.5.4"
+Glob = "1.3.1"
