--- a/.github/workflows/runtests.yml
+++ b/.github/workflows/runtests.yml
@@ -155,9 +155,9 @@ jobs:
       # Run tests
       - uses: julia-actions/julia-runtest@v1
 
-      # Code coverage
-      - uses: julia-actions/julia-processcoverage@v1
-      - uses: codecov/codecov-action@v5
-        if: github.ref != 'refs/heads/master'
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
+    #   # Code coverage
+    #   - uses: julia-actions/julia-processcoverage@v1
+    #   - uses: codecov/codecov-action@v5
+    #     if: github.ref != 'refs/heads/master'
+    #     with:
+    #       token: ${{ secrets.CODECOV_TOKEN }}
