--- a/Project.toml
+++ b/Project.toml
@@ -55,6 +55,7 @@ QED = "8bcbec86-48c7-11ec-16a6-c1bc83299373"
 QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
 RABBIT = "98960a00-302f-469e-9595-275b70d10766"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
 Serialization = "9e88b42a-f829-5b0c-bbe9-9e923198166b"
 SimulationParameters = "32ab26d3-25d6-405d-a295-367385e16093"
 SnoopPrecompile = "66db9d55-30c0-4569-8b51-7e840670fc0c"
@@ -124,6 +125,7 @@ ProgressMeter = "1"
 QED = "1.6"
 QuadGK = "2"
 RABBIT = "2"
+Roots = "2.2.10"
 Serialization = "1.11.0"
 SimulationParameters = "2"
 SnoopPrecompile = "1"
