--- a/.github/workflows/make_docs.yml
+++ b/.github/workflows/make_docs.yml
@@ -28,12 +28,15 @@ jobs:
         run: |
           echo "== df -h =="
           df -h
+          echo "== df -i (inodes) =="
+          df -i
           echo "== Large preinstalled toolchains (sizes) =="
           sudo du -sh /usr/local/lib/android /usr/share/dotnet /opt/ghc 2>/dev/null || true
 
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      # --- PROBE 1: After checkout, before any Julia setup/cache restore ---
+      # --- PROBE 1: After checkout ---
       - name: Disk after checkout
         run: |
           echo "== df -h =="
@@ -43,9 +46,10 @@ jobs:
           echo "== (If any) existing ~/.julia top-level =="
           du -h -d1 ~/.julia 2>/dev/null | sort -h || true
 
-      - uses: julia-actions/setup-julia@latest
+      - name: Setup Julia
+        uses: julia-actions/setup-julia@latest
 
-      # --- PROBE 2: After Julia is on PATH, before cache restore ---
+      # --- PROBE 2: Julia info before cache restore ---
       - name: Julia info (version & depot path)
         run: |
           which julia || true
@@ -54,18 +58,19 @@ jobs:
           echo "== df -h =="
           df -h
 
-      - uses: julia-actions/cache@v2
+      - name: Restore Julia cache
+        uses: julia-actions/cache@v2
 
-      # --- PROBE 3: Immediately after cache restore ---
+      # --- PROBE 3: After cache restore ---
       - name: Disk & depot after cache restore
         run: |
           echo "== df -h =="
           df -h
           echo "== ~/.julia (top-level) =="
           du -h -d1 ~/.julia 2>/dev/null | sort -h || true
-          echo "== ~/.julia/artifacts (largest 50 entries) =="
+          echo "== ~/.julia/artifacts (largest 50) =="
           du -h -d1 ~/.julia/artifacts 2>/dev/null | sort -h | tail -n 50 || true
-          echo "== ~/.julia/scratchspaces (largest 50 entries) =="
+          echo "== ~/.julia/scratchspaces (largest 50) =="
           du -h -d1 ~/.julia/scratchspaces 2>/dev/null | sort -h | tail -n 50 || true
           echo "== ~/.julia/compiled (top-level) =="
           du -h -d1 ~/.julia/compiled 2>/dev/null | sort -h || true
@@ -77,12 +82,12 @@ jobs:
           rm -rf ~/.julia/registries/FuseRegistry
           julia -e 'using Pkg; Pkg.Registry.add(RegistrySpec(url="https://github.com/ProjectTorreyPines/FuseRegistry.jl.git")); Pkg.Registry.add("General"); Pkg.Registry.update()'
 
-      # --- PROBE 4: After adding registries ---
-      - name: Disk & registries after registry add/update
+      # --- PROBE 4: After registries added/updated ---
+      - name: Disk & registries after registry update
         run: |
           echo "== df -h =="
           df -h
-          echo "== ~/.julia/registries =="
+          echo "== ~/.julia/registries (depth 2) =="
           du -h -d2 ~/.julia/registries 2>/dev/null | sort -h || true
 
       - name: Replace git@github.com with https in Package.toml files
@@ -94,8 +99,27 @@ jobs:
         run: |
           echo "== df -h =="
           df -h
-          echo "== docs/ tree (top-level) =="
+          echo "== docs/ tree (depth 2) =="
           du -h -d2 docs 2>/dev/null | sort -h || true
+
+      # === START BACKGROUND MONITOR (covers instantiate + docs build) ===
+      - name: Start disk monitor
+        run: |
+          (
+            while true; do
+              echo "===== $(date -u) DISK SNAPSHOT ====="
+              df -h
+              df -i
+              echo "-- ~/.julia top --"
+              du -h -d1 ~/.julia 2>/dev/null | sort -h | tail -n 20 || true
+              echo "-- artifacts top 40 --"
+              du -h -d1 ~/.julia/artifacts 2>/dev/null | sort -h | tail -n 40 || true
+              echo "-- scratchspaces top 40 --"
+              du -h -d1 ~/.julia/scratchspaces 2>/dev/null | sort -h | tail -n 40 || true
+              sleep 20
+            done
+          ) &
+          echo $! > /tmp/diskmon.pid
 
       - name: Install dependencies
         run: |
@@ -106,21 +130,21 @@ jobs:
             Pkg.instantiate()
           '
 
-      # --- PROBE 6: After instantiate (this often triggers downloads/artifacts) ---
+      # --- PROBE 6: After instantiate (critical growth point) ---
       - name: Disk & depot after instantiate
         run: |
           echo "== df -h =="
           df -h
           echo "== ~/.julia (top-level) =="
           du -h -d1 ~/.julia 2>/dev/null | sort -h || true
-          echo "== ~/.julia/artifacts (largest 50 entries) =="
+          echo "== ~/.julia/artifacts (largest 50) =="
           du -h -d1 ~/.julia/artifacts 2>/dev/null | sort -h | tail -n 50 || true
-          echo "== ~/.julia/scratchspaces (largest 50 entries) =="
+          echo "== ~/.julia/scratchspaces (largest 50) =="
           du -h -d1 ~/.julia/scratchspaces 2>/dev/null | sort -h | tail -n 50 || true
           echo "== ~/.julia/compiled (top-level) =="
           du -h -d1 ~/.julia/compiled 2>/dev/null | sort -h || true
 
-      # --- NEW: Julia-level probe to see exactly what's in the docs env ---
+      # --- Julia-level context: what packages/artifacts are in the docs env? ---
       - name: Pkg status & artifact dirs (docs env)
         run: |
           julia --project=docs -e '
@@ -131,12 +155,8 @@ jobs:
           '
 
       # --- PROBE 7: Just before docs build ---
-      - name: Disk before build
-        run: |
-          echo "== df -h =="
-          df -h
-          echo "== docs/ size recap =="
-          du -h -d2 docs 2>/dev/null | sort -h || true
+      - name: Disk before docs build
+        run: df -h
 
       - name: Build and deploy
         env:
@@ -144,13 +164,19 @@ jobs:
           DOCUMENTER_KEY: ${{ secrets.DOCUMENTER_KEY }}
         run: julia --project=docs/ docs/make.jl
 
-      # --- PROBE 8: After docs build (even on failure this may not run; keep it for successes) ---
-      - name: Disk after build
+      # --- ALWAYS stop the monitor; then one last snapshot if we got here ---
+      - name: Stop disk monitor
+        if: always()
+        run: |
+          kill "$(cat /tmp/diskmon.pid)" 2>/dev/null || true
+          rm -f /tmp/diskmon.pid || true
+
+      - name: Disk after docs build
         if: always()
         run: |
           echo "== df -h =="
           df -h
           echo "== ~/.julia (top-level) =="
           du -h -d1 ~/.julia 2>/dev/null | sort -h || true
-          echo "== docs/ build dir (if exists) =="
+          echo "== docs/build (depth 2) =="
           du -h -d2 docs/build 2>/dev/null | sort -h || true
