CompatHelper: bump compat for JSON to 1, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -102,7 +102,7 @@ HelpPlots = "1"
 IMAS = "6"
 IMASutils = "1.5.1"
 Interpolations = "0.15, 0.16.1"
-JSON = "0.21"
+JSON = "0.21, 1"
 JpegTurbo = "0.1"
 LaTeXStrings = "1"
 LibGEOS = "0.9"
