--- a/Project.toml
+++ b/Project.toml
@@ -136,6 +136,6 @@ ThermalSystemModels = "1"
 TimerOutputs = "0.5"
 TroyonBetaNN = "1"
 TurbulentTransport = "1"
-VacuumFields = "4, 5"
+VacuumFields = "6"
 Weave = "0.10"
 YAML = "0.4"
