--- a/.github/workflows/runtests.yml
+++ b/.github/workflows/runtests.yml
@@ -41,9 +41,9 @@ jobs:
       fail-fast: false
       matrix:
         flavor:
-          - { os: ubuntu-latest, arch: x64, version: "1.11" }
-          - { os: macos-latest, arch: arm64, version: "1.11" }
-#          - { os: windows-latest, arch: x86, version: "1.11" }
+          - { os: ubuntu-latest, arch: x64, version: "1.x" }
+          - { os: macos-latest, arch: arm64, version: "1.x" }
+#          - { os: windows-latest, arch: x86, version: "1.x" }
     env:
       GKSwstype: 100 # disable Plots.jl interactive output
 
