--- a/Project.toml
+++ b/Project.toml
@@ -27,6 +27,7 @@ GeoInterface = "cf35fbd7-0cd7-5166-be24-54bfbe79505f"
 HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
 HelpPlots = "5880b2e8-ad0a-48c9-bacd-30dc9c1357e0"
 IMAS = "13ead8c1-b7d1-41bb-a6d0-5b8b65ed587a"
+IMASdd = "c5a45a97-b3f9-491c-b9a7-aa88c3bc0067"
 IMASutils = "b8e4ee59-9bed-3a6a-a553-8dd24d6374ad"
 InteractiveUtils = "b77e0a4c-d291-57a0-90e8-8db25a27a240"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
@@ -137,3 +138,6 @@ TroyonBetaNN = "1"
 TurbulentTransport = "1"
 VacuumFields = "6"
 Weave = "0.10"
+
+[sources]
+IMASdd = {url = "https://github.com/ProjectTorreyPines/IMASdd.jl.git", rev = "fix/nospecialize"}
