Update IMAS compat

--- a/Project.toml
+++ b/Project.toml
@@ -98,7 +98,7 @@ GACODE = "1"
 GeoInterface = "1"
 HDF5 = "0.17.2"
 HelpPlots = "1"
-IMAS = "6"
+IMAS = "6, 7"
 IMASutils = "1.5.1"
 Interpolations = "0.15, 0.16.1"
 JSON = "0.21"
