--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "FUSE"
 uuid = "e64856f0-3bb8-4376-b4b7-c03396503992"
-authors = ["Orso Meneghini <orso82@gmail.com>"]
 version = "0.9.1"
+authors = ["Orso Meneghini <orso82@gmail.com>"]
 
 [deps]
 AbstractTrees = "1520ce14-60c1-5f80-bbc7-55ef81b5835c"
@@ -10,6 +10,7 @@ BoundaryPlasmaModels = "2da5b0d0-c5e5-4f14-9caf-62d0020df410"
 CHEASE = "40781a8e-f1bb-11ec-24ef-0f6bc40c1567"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 ClusterManagers = "34f1f09b-3a8b-5176-ab39-66d58a4d544e"
+Clustering = "aaaa29a8-35af-508c-8bc3-b662a17a0fe5"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
@@ -86,6 +87,7 @@ BoundaryPlasmaModels = "1"
 CHEASE = "1"
 CSV = "0.10"
 ClusterManagers = "0.4"
+Clustering = "0.15.8"
 DataFrames = "1"
 DelimitedFiles = "1"
 DifferentialEquations = "7.16.1"
